# DB

./: .gitignore  CMakeLists.txt  FieldInputDialog.cpp  FieldInputDialog.h  README.md  admin.cpp  admin.h  affair.cpp  affair.h  colomn_editor.cpp  colomn_editor.h  databaselistdialog.cpp  databaselistdialog.h  datamanager.cpp  datamanager.h  dbManager.cpp  dbManager.h  fieldmanage.cpp  fieldmanage.h  highlighttextedit.cpp  highlighttextedit.h  highsettings.cpp  highsettings.h  highsettings.ui  index.cpp  index.h  lexer.cpp  lexer.h  logger.cpp  logger.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  server.cpp  server.h  (+13 more)
res/: .tb.txt  B.tdf.txt  QQQ.tb.txt  QQQ.tdf.txt  a.tb.txt  a.tdf.txt  apa.data.txt  apa.tdf.txt  aq.data.txt  aq.tdf.txt  bpb.tdf.txt  bq.data.txt  bq.tdf.txt  c.tb.txt  databases.txt  dsft.tdf.txt  eq.data.txt  eq.tdf.txt  g.data.txt  g.tdf.txt  hhh.tb.txt  iii.tdf.txt  mnn.tb.txt  new_table.tdf.txt  nmn.data.txt  nmn.tdf.txt  oioi.tb.txt  oioioi.tb.txt  oioioioi.tb.txt  ooi.tdf.txt  ppp.tdf.txt  qa.tb.txt  qb.tb.txt  qc.tdf.txt  qe.tb.txt  qq.tb.txt  qqww.tdf.txt  rights.rht  system_logs.txt  ta.tdf.txt  (+30 more)
